--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.9",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.3",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
