--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^6.0.16",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
@@ -44,6 +45,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@aws-amplify/backend": "^0.12.1",
+    "@aws-amplify/backend-cli": "^0.11.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "aws-cdk": "^2.128.0",
+    "aws-cdk-lib": "^2.128.0",
+    "constructs": "^10.3.0",
+    "typescript": "^5.3.3"
   }
 }
