--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.0.16",
     "bootstrap": "^5.3.2",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
