--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "express": "^4.18.2",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-validation": "^0.1.11",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-native-web": "^0.19.9",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +53,7 @@
     "aws-cdk": "^2.128.0",
     "aws-cdk-lib": "^2.128.0",
     "constructs": "^10.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "web-vitals": "^3.5.2"
   }
 }
