--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "styled-components": "^6.1.8",
     "typescript": "^5.3.3"
   },
+  "overrides": {
+    "typescript":"^5.3.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
